--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/scanner"
+        android:src="@drawable/scanimg"
         android:layout_marginTop="70dp"
         android:id="@+id/idIVLogo"/>
 
