--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -12,7 +12,7 @@
         android:layout_height="250dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:src="@drawable/scanner"
+        android:src="@drawable/scanimg"
         android:id="@+id/idIVCaptureImage"/>
 
     <TextView
