--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginBottom="10dp"/>
 
+    <!--This button is used to go in Scanner Activity-->
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
