Updated UI and Resolved Warnings

--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -1,66 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black_shade_1"
     tools:context=".ScannerActivity">
 
     <!--This imageview is where clicked image will show up-->
-    <ImageView
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:src="@drawable/scanimg"
-        android:id="@+id/idIVCaptureImage"/>
 
     <!--This text view will show the results-->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_below="@id/idIVCaptureImage"
-        android:id="@+id/idIvDetectedText"
-        android:textColor="@color/yellow"
-        android:text="Your Result Will Appear Here"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:padding="4dp"/>
+
+    <ImageView
+        android:id="@+id/idIVCaptureImage"
+        android:layout_width="250dp"
+        android:layout_height="0dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="74dp"
+        android:src="@drawable/scanimg"
+        app:layout_constraintBottom_toTopOf="@+id/idIvDetectedText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!--This button is use to click picture-->
-    <Button
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/idIvDetectedText"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_below="@id/idIvDetectedText"
-        android:layout_marginTop="30dp"
-        android:text="Snap"
-        android:textAllCaps="false"
-        android:background="@drawable/button_back"
-        app:backgroundTint="@color/yellow"
-        android:id="@+id/idBTNSnap"/>
+        android:layout_below="@id/idIVCaptureImage"
+        android:layout_marginBottom="77dp"
+        android:gravity="center"
+        android:padding="4dp"
+        android:text="Your Result Will Appear Here"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/idBTNDetect"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/idIVCaptureImage" />
 
     <!--This button is used to detect text from images-->
     <Button
-        android:layout_width="match_parent"
+        android:id="@+id/idBTNSnap"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_below="@id/idIvDetectedText"
+        android:layout_marginStart="6dp"
+        android:background="@drawable/button_back"
+        android:text="Snap"
+        android:textAllCaps="false"
+        app:backgroundTint="@color/teal_700"
+        app:layout_constraintBaseline_toBaselineOf="@+id/idBTNDetect"
+        app:layout_constraintEnd_toStartOf="@+id/idBTNDetect"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/idBTNDetect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@id/idBTNSnap"
-        android:layout_marginTop="30dp"
+        android:layout_marginEnd="7dp"
+        android:layout_marginBottom="202dp"
+        android:background="@drawable/button_back"
         android:text="Detect"
         android:textAllCaps="false"
-        android:background="@drawable/button_back"
-        app:backgroundTint="@color/yellow"
-        android:id="@+id/idBTNDetect"/>
+        app:backgroundTint="@color/teal_700"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/idBTNSnap"
+        app:layout_constraintTop_toBottomOf="@+id/idIvDetectedText" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
