--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black_shade_1"
     tools:context=".MainActivity">
 
     <ImageView
+        android:id="@+id/idIVLogo"
         android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="83dp"
         android:src="@drawable/scanimg"
-        android:layout_marginTop="70dp"
-        android:id="@+id/idIVLogo"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/idIVLogo"
-        android:text="Welcome To Text Detector"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/yellow"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:id="@+id/idTVHead"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="10dp"/>
+        app:layout_constraintBottom_toTopOf="@+id/idTVHead"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!--This button is used to go in Scanner Activity-->
+    <TextView
+        android:id="@+id/idTVHead"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/idIVLogo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="81dp"
+        android:gravity="center"
+        android:text="Welcome To Text Detector"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/idBTNCapture"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/idIVLogo" />
+
     <Button
-        android:layout_width="match_parent"
+        android:id="@+id/idBTNCapture"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/idTVHead"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginBottom="232dp"
+        android:background="@drawable/button_back"
         android:text="Capture Image"
         android:textAllCaps="false"
-        android:id="@+id/idBTNCapture"
-        android:background="@drawable/button_back"
-        app:backgroundTint="@color/yellow"/>
+        app:backgroundTint="@color/teal_700"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/idTVHead" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
