--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -21,7 +21,8 @@
         app:layout_constraintBottom_toTopOf="@+id/idIvDetectedText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="Scanner Image" />
 
     <!--This button is use to click picture-->
     <TextView
