--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,45 +6,62 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/idIVLogo"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="200dp"
-        android:layout_height="0dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
-        android:layout_marginBottom="83dp"
-        android:src="@drawable/scanimg"
+        android:layout_height="150dp"
+        android:layout_marginTop="106dp"
+        android:layout_marginBottom="96dp"
+        app:cardCornerRadius="30dp"
         app:layout_constraintBottom_toTopOf="@+id/idTVHead"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="Scanner Image" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <!--This button is used to go in Scanner Activity-->
+        <ImageView
+            android:id="@+id/idIVLogo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:scaleType="centerCrop"
+            android:contentDescription="@string/scanner_image"
+            android:src="@drawable/scanimg" />
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="18dp"
+        app:layout_constraintBottom_toTopOf="@+id/idBTNCapture"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView">
+
     <TextView
         android:id="@+id/idTVHead"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/idIVLogo"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="81dp"
         android:gravity="center"
+        android:padding="15dp"
         android:text="Welcome To Text Detector"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/idBTNCapture"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idIVLogo" />
+        android:textStyle="bold" />
+
+    </androidx.cardview.widget.CardView>
+
+    <!--This button is used to go in Scanner Activity-->
 
     <Button
         android:id="@+id/idBTNCapture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/idTVHead"
-        android:layout_marginBottom="232dp"
+        android:layout_marginBottom="205dp"
         android:background="@drawable/button_back"
         android:text="Capture Image"
         android:textAllCaps="false"
