--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -6,65 +6,82 @@
     android:layout_height="match_parent"
     tools:context=".ScannerActivity">
 
-    <!--This imageview is where clicked image will show up-->
+    <!--This CardView Contains imageView is where clicked image will show up-->
 
-    <!--This text view will show the results-->
-
-    <ImageView
-        android:id="@+id/idIVCaptureImage"
-        android:layout_width="250dp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView2"
+        android:layout_width="200dp"
         android:layout_height="0dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="48dp"
-        android:layout_marginBottom="74dp"
-        android:src="@drawable/scanimg"
-        app:layout_constraintBottom_toTopOf="@+id/idIvDetectedText"
+        android:layout_marginTop="101dp"
+        android:layout_marginBottom="89dp"
+        app:cardCornerRadius="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/cardView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="Scanner Image" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <!--This button is use to click picture-->
-    <TextView
-        android:id="@+id/idIvDetectedText"
-        android:layout_width="0dp"
+        <ImageView
+            android:id="@+id/idIVCaptureImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/scanner_image"
+            android:scaleType="centerCrop"
+            android:src="@drawable/scanimg" />
+
+    </androidx.cardview.widget.CardView>
+
+    <!--This CardView Contains text view that will show the results-->
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView3"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/idIVCaptureImage"
-        android:layout_marginBottom="77dp"
-        android:gravity="center"
-        android:padding="4dp"
-        android:text="Your Result Will Appear Here"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:layout_marginBottom="83dp"
+        app:cardCornerRadius="18dp"
         app:layout_constraintBottom_toTopOf="@+id/idBTNDetect"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idIVCaptureImage" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView2">
 
-    <!--This button is used to detect text from images-->
+        <TextView
+            android:id="@+id/idIvDetectedText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:text="Your Result Will Appear Here"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+    </androidx.cardview.widget.CardView>
+
+    <!--This button is use to click picture-->
+
     <Button
         android:id="@+id/idBTNSnap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/idIvDetectedText"
-        android:layout_marginStart="6dp"
+        android:layout_marginEnd="24dp"
         android:background="@drawable/button_back"
         android:text="Snap"
         android:textAllCaps="false"
         app:backgroundTint="@color/teal_700"
         app:layout_constraintBaseline_toBaselineOf="@+id/idBTNDetect"
         app:layout_constraintEnd_toStartOf="@+id/idBTNDetect"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <!--This button is used to detect text from images-->
 
     <Button
         android:id="@+id/idBTNDetect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/idBTNSnap"
-        android:layout_marginEnd="7dp"
-        android:layout_marginBottom="202dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="210dp"
         android:background="@drawable/button_back"
         android:text="Detect"
         android:textAllCaps="false"
@@ -72,7 +89,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/idBTNSnap"
-        app:layout_constraintTop_toBottomOf="@+id/idIvDetectedText" />
-
+        app:layout_constraintTop_toBottomOf="@+id/cardView3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
