--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -48,7 +48,7 @@
                 android:id="@+id/idIvDetectedText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
+                android:layout_gravity="center"
                 android:padding="20dp"
                 android:text="Your Result Will Appear Here"
                 android:textAlignment="center"
